Add/index.html content and pics

--- a/index.html
+++ b/index.html
@@ -8,7 +8,25 @@
     <link rel="stylesheet" href="./css/estilo.css">
 </head>
 <body>
-    <a href="./pages/quiz.html">quiz</a>
+    <section class="contenedorPregunta" id="index">
+        <article>
+            <div id="vacio"></div>
+
+            <blockquote id="cita">
+                <p>"Los jóvenes de hoy no saben nada de la vida..."</p>
+                <footer>Don Genaro, el abuelo Refranero.</footer>
+            </blockquote>            
+        </article>
+        <article>
+            <p>Demuéstrale a <b>Don Genaro</b> que está equivocado, que <b>tú sabes mucho de la vida</b>. Completa en este <b>Quizz</b>  sus refranes y dichos favoritos.</p>
+            <button class="pulsar" type="button"><a href="./pages/quiz.html">¡A JUGAR!</a></button>
+            <img class="icono" src="./assets/img/icono1mayor.png">
+   
+           
+        </article>
+    </section>
+
     <script src="script.js"></script>
+
 </body>
 </html>
