--- a/pages/quiz.html
+++ b/pages/quiz.html
@@ -203,7 +203,7 @@
         </section>
     
     
-        <button type="submit">Comprobar datos</button>
+        <button class="pulsar" type="submit">Comprobar datos</button>
     </form> 
    
  
