Add/ids and classes in index.html

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="./css/estilo.css">
 </head>
 <body>
-    <section class="contenedorPregunta" id="index">
-        <article>
+    <section class="formularioQuiz" id="index">
+        <article id="fotoDonGenaro">
             <div id="vacio"></div>
 
             <blockquote id="cita">
                 <p>"Los jóvenes de hoy no saben nada de la vida..."</p>
-                <footer>Don Genaro, el abuelo Refranero.</footer>
+                <footer>Don Genaro, el abuelo refranero.</footer>
             </blockquote>            
         </article>
         <article>
