Add/favicon, audios, imgs

--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proyecto Quiz - Inicio</title>
+    <title>Proyecto Quiz Refranero - Inicio</title>
+    <link rel="shortcut icon" href="assets/img/faviconRefranero.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/normalice.css">
     <link rel="stylesheet" href="./css/estilo.css">
 </head>
 <body>
+    <header>
+        <img id = "headerImg" src="./assets/img/imgHeader.png" alt="Encabezado">
+    </header>
     <section class="formularioQuiz" id="index">
-        <article id="fotoDonGenaro">
+        <article class="bloquesIndex"  id="fotoDonGenaro">
             <div id="vacio"></div>
 
             <blockquote id="cita">
@@ -17,10 +21,10 @@
                 <footer>Don Genaro, el abuelo refranero.</footer>
             </blockquote>            
         </article>
-        <article>
+        <article class="bloquesIndex" id="aJugar">
             <p>Demuéstrale a <b>Don Genaro</b> que está equivocado, que <b>tú sabes mucho de la vida</b>. Completa en este <b>Quizz</b>  sus refranes y dichos favoritos.</p>
-            <button class="pulsar" type="button"><a href="./pages/quiz.html">¡A JUGAR!</a></button>
-            <img class="icono" src="./assets/img/icono1mayor.png">
+            <button class="pulsar" type="button"> <img class="icono" src="./assets/img/icono1mayor.png"><a href="./pages/quiz.html">¡A JUGAR!</a></button>
+           
    
            
         </article>
