--- a/pages/quiz.html
+++ b/pages/quiz.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto Quiz Refranero - ¡A jugar!</title>
+    <link rel="shortcut icon" href="../assets/img/faviconRefranero.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/normalice.css">
     <link rel="stylesheet" href="../css/estilo.css">
+    
 
 </head>
 <body>
@@ -205,6 +207,8 @@
     
         <button class="pulsar" type="submit">Comprobar datos</button>
     </form> 
+
+    <audio class="audio" src="../assets/audios/contestar.wav" autoplay loop></audio>
    
  
     <script src="../script.js"></script>
