Add/media queries and css for INDEX.HTML

--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
     </header>
     <section class="formularioQuiz" id="index">
         <article class="bloquesIndex"  id="fotoDonGenaro">
-            <div id="vacio"></div>
-
             <blockquote id="cita">
                 <p>"Los jóvenes de hoy no saben nada de la vida..."</p>
                 <footer>Don Genaro, el abuelo refranero.</footer>
@@ -23,7 +21,7 @@
         </article>
         <article class="bloquesIndex" id="aJugar">
             <p>Demuéstrale a <b>Don Genaro</b> que está equivocado, que <b>tú sabes mucho de la vida</b>. Completa en este <b>Quizz</b>  sus refranes y dichos favoritos.</p>
-            <button class="pulsar" type="button"> <img class="icono" src="./assets/img/icono1mayor.png"><a href="./pages/quiz.html">¡A JUGAR!</a></button>
+            <button id="pulsar" type="button"> <img class="icono" src="./assets/img/icono1mayor.png"><a href="./pages/quiz.html">¡A JUGAR!</a></button>
            
    
            
